[package]
name = "luna_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
# Webserver
actix-web = "4.5.1"
actix-service = "2.0"

# GraphQL
async-graphql = { version = "7.0.11", features = ["uuid", "chrono"] }
async-graphql-actix-web = "7.0.11"

# JSON Serialization
serde = { version = "1.0.156", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

# Database
diesel = { version = "2.2.0", features = ["r2d2", "postgres", "uuid", "chrono"] }

# Environment
dotenvy = "0.15"
env_logger = "0.11.3"

# Security/Authentication
bcrypt = "0.13.0"
jsonwebtoken = "8.1.0"

# UUID & Date/Time
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async & Futures
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Logging
log = "0.4"
once_cell = "1.17.0"

# Utility
bytes = "1"
json = "0.12"